hphp/test/quick/record-abstract-ins.php.expectf
Fatal error: Cannot instantiate abstract record A in %s/record-abstract-ins.php on line 9
